# docs/openapi/swagger.yaml
@@ -467,6 +467,46 @@ paths:
       summary: 公钥获取链接
       tags:
       - OIDC
+  /oauth/login:
+    get:
+      consumes:
+      - application/json
+      description: 返回OAuth登录页面
+      parameters:
+      - description: 备案ID
+        in: query
+        name: client_id
+        required: true
+        type: string
+      - description: 重定向URI
+        in: query
+        name: redirect_uri
+        required: true
+        type: string
+      - description: 响应类型
+        in: query
+        name: response_type
+        required: true
+        type: string
+      - description: 权限范围
+        in: query
+        name: scope
+        type: string
+      - description: 状态参数
+        in: query
+        name: state
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "302":
+          description: 重定向到指定URI
+          schema:
+            type: string
+      summary: OAuth登录授权
+      tags:
+      - OIDC
   /oauth/userinfo:
     get:
       description: 通过access token获取用户信息
